// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Select Input (private) withImage - Empty image path 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c0 > label {
  padding: 0 8px 0 0;
}

<div
  className="labelContainer c0"
>
  <input />
</div>
`;

exports[`Storyshots Select Input (private) withImage - Valid image path 1`] = `
.c2 {
  box-sizing: border-box;
  width: 24px;
  height: 24px;
  overflow: hidden;
  border-radius: 100%;
  object-fit: cover;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c0 > label {
  padding: 0 8px 0 0;
}

.c1 {
  margin-right: -7px;
  margin-left: 10px;
}

<div
  className="labelContainer c0"
>
  <img
    alt=""
    className="itemImage c1 c2"
    size={24}
    src="https://picsum.photos/100?image=0"
  />
  <input />
</div>
`;

exports[`Storyshots Select Input (private) withImage - With inputRef 1`] = `
.c2 {
  box-sizing: border-box;
  width: 24px;
  height: 24px;
  overflow: hidden;
  border-radius: 100%;
  object-fit: cover;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
}

.c0 > label {
  padding: 0 8px 0 0;
}

.c1 {
  margin-right: -7px;
  margin-left: 10px;
}

<div
  className="labelContainer c0"
>
  <img
    alt=""
    className="itemImage c1 c2"
    size={24}
    src="https://picsum.photos/100?image=0"
  />
  <input />
</div>
`;
